--- a/style.css
+++ b/style.css
@@ -135,11 +135,11 @@ margin-bottom: 50px;
 }
 hr{
     width: 4px;
-    height: 80px;
+    height: 60px;
     flex-shrink: 0;
     background: #FF900E;
     gap: 58px;
-    margin-top: 20px;
+    /* margin-top: 20px; */
     opacity: 0px;
     border: none;
 
@@ -281,28 +281,47 @@ hr{
 .second_description{
     text-align: center;
 }
-.box_icon{
-     padding: 5px;
-    width: 80px;
+.box_container{
     
-}
- .box_icon img {
-    width: 30px;
+        display: grid;
+        
+        /* margin-top: 30px; */
+        gap: 12px;
+       
+        grid-template-columns: repeat(2,1fr);
+        padding: 0px 20px;
+        margin: 0px 20px;
+    }
+
+.box_icon{
+     /* padding: 5px;
+    width: 80px; */
+padding: 30px;
+ width: 100px;
+   }
+.box_icon img {
+    /* width: 30px; */
+    width: 40px;
 }
 
  .box_icon h1 {
-    font-size: 15px;
+    /* font-size: 15px; */
+    font-size: 25px;
 }
 
  .box_icon p {
-    font-size: 10px;
+    /* font-size: 10px; */
+    font-size: 12px;
+}
+.third_design{
+    margin-bottom: 50px;
 }
 .third_container{
     display:flex;
     flex-direction: column-reverse;
 }
 .forth_design{
-    margin-bottom: 50px;
+    margin-bottom: 60px;
 }
 .social_img{
     width: 90px;
@@ -311,9 +330,7 @@ hr{
 .social_logo{
     display: grid;
     
-    
     gap: 20px;
-    
     grid-template-columns: repeat(2,1fr);
 }
 .footer_design{
@@ -356,6 +373,8 @@ p {
     font-size: 15px;
 }
 }
+
+
 
 /* Tablet Device */
 @media screen and (min-width:577px) and (max-width:992px) {
@@ -400,21 +419,21 @@ p {
     text-align: center;
 }
 .Quick_word{
-    font-size: 25px;
+    font-size: 35px;
 }
 .middle_word{
-    font-size: 25px;
+    font-size: 35px;
 }
 .Feature_word{
-    font-size: 25px;
+    font-size: 35px;
 }
-.btn_explore{
+/* .btn_explore{
     padding: 10px;
     font-size: 14px;
     width: 115px;
     height: 40px;
     
-}
+} */
 .title_feature{
     font-size: 30px;
     text-align: center;
@@ -423,20 +442,19 @@ p {
     text-align: center;
 }
 .box_icon{
-     padding: 5px;
-    width: 80px;
-    
+    padding: 20px;
+    width: 100px;
 }
- .box_icon img {
-    width: 30px;
-}
-
- .box_icon h1 {
-    font-size: 15px;
+.box_icon img {
+   width: 50px;
 }
 
- .box_icon p {
-    font-size: 10px;
+.box_icon h1 {
+   font-size: 25px;
+}
+
+.box_icon p {
+   font-size: 12px;
 }
 .third_container{
     display:flex;
@@ -479,27 +497,24 @@ p {
 }
 .img_lady{
     
-        width: 350px;
-        margin: 0px 20px;
-        padding: 0px 20px;
-}
+    width: 600px;
+        
+    margin: 0px 30px;
+        
+    padding: 0px 20px;
+    }
 .sticker{
     
-    width: 150px;
-    padding: 30px;
-    left: 10px;
-
+    /* width: 150px;
+    padding: 30px; */
+    left: 20px;
 }
+
+/* }
 .year_ten{
     font-size: 30px;
 }
 .sticker p{
     font-size: 15px;
-}
-
-
-
-
-
-
+}  */
 }
