--- a/style.css
+++ b/style.css
@@ -126,6 +126,8 @@ margin-bottom: 50px;
     font-weight: 700;
     color: #000;
     margin: 25px 0;
+    border-left: #FF900E;
+    
 }
 .design_box{
     background: #FFF;
@@ -359,7 +361,8 @@ p {
     
         width: 350px;
         margin: 0px 20px;
-        padding: 0px 20px;
+        /* padding: 0px 20px; */
+        padding: 0px 13px;
 }
 .sticker{
     
@@ -503,14 +506,20 @@ p {
         
     margin: 0px 30px;
         
-    padding: 0px 20px;
+    /* padding: 0px 20px; */
+    padding: 0px 13px;
     }
+
+    
+    
 .sticker{
     
     /* width: 150px;
     padding: 30px; */
     left: 20px;
 }
+
+
 
 /* }
 .year_ten{
