--- a/style.css
+++ b/style.css
@@ -324,6 +324,8 @@ padding: 30px;
 }
 .forth_design{
     margin-bottom: 60px;
+        margin-left: -21px;
+    }
 }
 .social_img{
     width: 90px;
@@ -363,7 +365,7 @@ p {
     margin: 0px 11px;
     /* padding: 0px 20px; */
     padding: 0px 0px;
-}
+
 }
 .sticker{
     
